--- a/landing_page1/css/style.css
+++ b/landing_page1/css/style.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 body{
   background: rgba(0,0,0,0.8);
   margin: 0;
   color: #fff;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Montserrat', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .showcase::after{
@@ -15,48 +16,49 @@ body{
   background-position: center;
   display: block;
   filter: grayscale(.8) blur(10px);
+  -webkit-filter: grayscale(.8) blur(10px);
   transition: all 1000ms;
 }
 
 .showcase:hover{
   filter: blur(2px);
+  -webkit-filter: blur(2px);
 }
 
 .showcase:hover::after{
   filter: grayscale(.8) blur(0px);
+  -webkit-filter:grayscale(.8) blur(0px);
 }
 
 .content{
+  width: 80%;
   text-align: center;
   position: absolute;
   z-index: 1;
-  top:10%;
-  left: 25%;
-  width: 50%;
-  margin: 0 auto;
+  top:20%;
+  left: 10%;
   transition: all 1000ms;
 }
 
 .content .logo{
-  height: 700px;
-  width: 700px;
+  height: 30vh;
+
 }
 
 .content .title{
-  font-size: 2.2rem;
-  margin-top: 1rem;
+  font-size: 2em;
+  margin-top: 1em;
 }
 
 .content .text{
-  margin-top: 1rem;
-  line-height: 1.7;
+  margin-top: 1em;
 }
 
 .container{
   max-width: 960px;
   margin: auto;
   overflow: hidden;
-  padding: 4rem 1rem;
+  padding: 1em 1em;
 }
 
 .grid-3{
@@ -92,19 +94,26 @@ footer p {
 }
 
 /*Smaller screens*/
-@media (max-width: 560px) {
+@media (max-width: 568px) {
+
   .showcase::after{
     height: 50vh;
   }
 
   .content{
     top: 5%;
+    left: 10%;
     margin-top: 5px;
+    margin-left: auto;
   }
 
   .content .logo{
-    height: 200px;
-    width: 200px;
+    height: 20vh
+  }
+
+  .content .title{
+    font-size: 1.5em;
+    margin-top: auto;
   }
 
   .content .text{
@@ -112,6 +121,9 @@ footer p {
   }
 
  .grid-3{
+   grid-template-columns: 1fr;
+ }
+ .grid-2{
    grid-template-columns: 1fr;
  }
 }
