--- a/landing_page2/css/style.css
+++ b/landing_page2/css/style.css
@@ -7,7 +7,7 @@ body{
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-weight: 500;
   line-height: 1.6;
-  color:#e68a00;
+  color:#ee8a00;
   text-align: justify;
 }
 
@@ -33,31 +33,49 @@ body{
 
 #showcase p{
   margin-top: 1em;
-  font-size: 1em;
+  font-size: 1.2em;
 }
 
 
 #showcase .button{
-  margin-top: 1em;
+  margin-top: 100px;
   font-size: 1.2em;
   text-decoration: none;
-  color: #e68a00;
-  border: #e68a00 1px solid;
+  color: #ee8a00;
+  border: #ee8a00 1px solid;
   border-radius: 10px;
   padding: 10px 20px;
 }
 
 #showcase .button:hover{
-  background-color: #e68a00;
+  background-color: #ee8a00;
   opacity: .6;
   color: #fff;
 }
 
 .section-1 {
-  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
   margin:0 auto;
   color: #926239;
-  padding: 1em 2em;
+  padding: 20px;
+  height:50vh;
+}
+
+.section-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  margin:0 auto;
+  background-color: #926239;
+  color:#eee;
+  padding: 20px;
+  height:50vh;
 }
 
 footer{
@@ -67,6 +85,20 @@ footer{
   align-content: center;
   align-items: center;
   height: 20vh;
-  background-color: #926239;
+  background-color:#1a0d00;
   color: #fff;
+}
+footer a{
+  text-decoration: none;
+  color: #fff;
+}
+footer a:hover{
+  text-decoration: underline;
+  color: #fff;
+}
+
+@media (max-width: 568px) {
+  .section-1,.section-2{
+    height: auto;
+  }
 }
