--- a/landing_page2/css/style.css
+++ b/landing_page2/css/style.css
@@ -50,7 +50,7 @@ body{
 #showcase .button:hover{
   background-color: #ee8a00;
   opacity: .6;
-  color: #fff;
+  color: #eee;
 }
 
 .section-1 {
@@ -62,7 +62,7 @@ body{
   margin:0 auto;
   color: #926239;
   padding: 20px;
-  height:50vh;
+  height:30vh;
 }
 
 .section-2 {
@@ -75,7 +75,29 @@ body{
   background-color: #926239;
   color:#eee;
   padding: 20px;
-  height:50vh;
+  height:30vh;
+}
+
+.section-3{
+  display: flex;
+}
+
+.section-3 div:nth-child(odd){
+  background-color: #926239;
+  color: #eee;
+}
+
+.section-3 div:nth-child(even){
+  background-color: #eee;
+  color: #926239;
+}
+.section-3 div{
+  padding: 20px;
+  height: 30vh;
+}
+
+.section-3 div h3{
+  text-align: center;
 }
 
 footer{
@@ -86,19 +108,31 @@ footer{
   align-items: center;
   height: 20vh;
   background-color:#1a0d00;
-  color: #fff;
+  color: #eee;
 }
 footer a{
   text-decoration: none;
-  color: #fff;
+  color: #eee;
 }
 footer a:hover{
   text-decoration: underline;
-  color: #fff;
+  color: #eee;
 }
+
+@media (max-width: 1200px) {
+  .section-1,.section-2{
+  }
+  .section-3{
+    flex-direction: column;
+  }
+}
+
 
 @media (max-width: 568px) {
   .section-1,.section-2{
     height: auto;
+  }
+  .section-3{
+    flex-direction: column;
   }
 }
