--- a/basic_html_css_layout_page/css/style.css
+++ b/basic_html_css_layout_page/css/style.css
@@ -14,7 +14,7 @@ body{
   background: url('../images/bg.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
-
+  min-width: 300px;
 
 }
 
@@ -29,14 +29,32 @@ ul{
   margin: 0;
   padding: 0;
 }
+.btn-1{
+  height: 30px;
+  background-color: #ffcc00;
+  border: #fff0b3 solid 2px;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
 
+  font-weight: bold;
+
+}
+.btn-1:hover{
+  height: 30px;
+  color:#fff0b3;
+  background-color: #cca300;
+
+}
 
 /*Header styling*/
 header{
   background-color: #ffcc00;
   padding-top: 30px;
+  padding-bottom: 30px;
   min-height: 70px;
   border-bottom: 5px solid #ffe680;
+  opacity: .8;
 }
 
 header a{
@@ -78,21 +96,151 @@ header  a:hover{
   padding: 0;
   margin: 0;
   min-height: 400px;
+  height: 100vh;
   background: url(../images/geometric_thingy.jpg) no-repeat;
   background-size: cover;
   text-align: center;
 }
-
 #showcase .overlay{
   padding:0;
-  min-width: 100%;
   min-height: 400px;
-  background-color: rgba(255,255,255,0.3)
+  height: 100vh;
+  background-color: rgba(255,255,255,0.4)
 }
 #showcase h1{
-  font-size: 2.5em;
-  z-index: 2;
+  font-size: 3em;
+  margin-top: 25vh;
+  letter-spacing: .2em;
 }
 #showcase p{
-  z-index: 2;
+  margin: 0 auto;
+  width: 60%;
+  font-size: 1em;
+}
+
+/*Newsletter section*/
+#newsletter{
+  padding: 1em;
+  background-color: #ffcc00;
+  opacity: .8;
+  color:#222;
+  border-bottom: 5px solid #ffe680;
+  border-top: 5px solid #ffe680;
+}
+
+#newsletter h1{
+  font-size: 1.3em;
+  float: left;
+}
+
+#newsletter form{
+  margin-top: 20px;
+  margin-left: -25%;
+  float: right;
+}
+
+#newsletter input[type="email"]{
+  padding: 5px;
+  height: 28px;
+  width: 250px;
+}
+
+#boxes{
+  margin-top: 10vh;
+  margin-bottom: 10vh;
+}
+
+/*Boxes section*/
+#boxes .box{
+  float: left;
+  text-align: center;
+  width: 33%;
+  padding: 10px;
+  font-size: 1.1em;
+}
+#boxes .box p{
+  text-align: left;
+}
+/*Footer*/
+footer{
+  text-align: center;
+  background-color: #ffcc00;
+  opacity: 0.8;
+  color: #222;
+  min-height: 20vh;
+  padding-top: 1.5em;
+  padding-bottom:1em;
+}
+
+@media (max-width: 900px){
+  #showcase{
+    height: 70vh;
+  }
+
+  #showcase h1{
+    margin-top: 16vh;
+    text-align: center;
+    font-size: 2.5em;
+  }
+  #showcase p{
+    text-align: center;
+    font-size: 1em;
+    width: 80%;
+  }
+
+  #newsletter h1{
+    width:100%;
+    text-align: center;
+  }
+
+  #newsletter form{
+    margin-top: -10px;;
+    width: 100%;
+  }
+  #newsletter input[type="email"]{
+    width: 100%;
+  }
+  .btn-1{
+    width: 100%;
+  }
+  /*Boxes section*/
+  #boxes .box{
+    float: left;
+    text-align: center;
+    width: 100%;
+    padding: 10px;
+    font-size: .7em;
+  }
+}
+@media (max-width: 568px) {
+
+  header #brand{
+    width: 100%;
+    text-align: center;
+  }
+
+  header li{
+    text-align: center;
+    width: 100%;
+    display: block;
+
+  }
+#showcase{
+  height: 50vh;
+}
+  #showcase h1{
+    margin-top: 15vh;
+    text-align: center;
+    font-size: 1.5em;
+    letter-spacing: .1em;
+  }
+
+  #showcase p{
+    display: none;
+  }
+
+
+  #newsletter h1{
+    font-size: 1em;
+  }
 }
